<resources>
    <string name="app_name">ARC-Lab</string>
    <string name="rinzex">Research Innovation Network-Technology ZEX</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Got It</string>
    <string name="app_frame">Advanced Robotic Control Lab</string>
    <string name="Qinit">A Quantum Initiative</string>
    <string name="moto">Growth Unbound</string>
    <string name="arc_info">Quantum School of Technology recently signed an MOU with APS GmbH, European center for mechatronics – Germany. Under this lab, the students at Quantum are getting extensive training on cutting edge Robotics Software under German trainers and supervisors. This training is meant to pave the way for Quantum students to access the industrial robots located in Germany in companies like Volkswagen, BMW, Mercedes, etc. And apply their work practically.\n\nQuantum has already sent two of its faculties, Assistant Professors namely Anees Ahmed and Manish Mittal to Germany on a Special Training with a purpose to get an additional knowledge on automation and industrial Robotics. The faculty has spend 15 days at the advanced center in Germany for the training and got well trained in latest robotic technologies by German experts.\n\nThe aim of ARC lab is to enhance the current education by introducing concrete industrial automation concepts by teaching robotics in Indian universities, with access to real industrial. Further, these labs can support Indian industries including SMEs by providing automation solutions tested under real production requirements.\n\nARC provides the students the access to industrial robotics under production conditions with remote control. These practical courses allow direct control of the industrial robots in Germany from Quantum. The students learn simulating, programming and controlling in order to test their results at these industrial robots, which are equipped with grippers, sensors, etc.\n\nThe students trained in ARC software shall become highly paid, skilled engineers for large industrial like automobile, food processing, power and other automated manufacturing industries both in India and abroad.\n\nAnother great move by Quantum, awarded as the “Best Engineering College Promoting Innovation in North India.”\n\n\nQuantum School of Technology\n“Growth Unbound”\n</string>


    <!--          Home (activity_min2)          -->


    <string name="text_ROS">ROS</string>
    <string name="text_Rapid">Rapid</string>
    <string name="text_Advc">Advanced C</string>
    <string name="text_cpp">C++</string>
    <string name="text_qarc">Q-ARC Lab</string>
    <string name="text_Pda">Development</string>


    <!--          Application Reference          -->


    <string name="ref_head">Learning Robotics from internet easy but through proper guidance is Hard.</string>
    <string name="ref_body">We build this App to make everyone learn easily and access content to have all around Development in Robotics language.</string>
    <string name="ref_conn">Connect with us</string>


    <!--          Project Development Approach          -->


    <string name="Pda_frame">Project Development Approach</string>
    <string name="Pda_stage1">Stage-1:</string>
    <string name="Pda_stage2">Stage-2:</string>
    <string name="Pda1">Understand theme of the project</string>
    <string name="Pda2">List down all the activities into tasks</string>
    <string name="Pda3">Breakdown all the activities into tasks</string>
    <string name="Pda4">Merge one or more tasks if possible</string>
    <string name="Pda5">(Say we have n numbers of task now)</string>
    <string name="Pda6">Decide the Static Data Structure</string>
    <string name="Pda7">Decide the Dynamic Data Structure</string>
    <string name="Pda8">List down APIs</string>
    <string name="Pda_ex1">Example:-</string>
    <string name="Pda_ex2">Say API is moveRobot</string>
    <string name="Pda_ex3">moveRobot()</string>
    <string name="Pda_ex4">1. Input</string>
    <string name="Pda_ex5">2. Output</string>
    <string name="Pda_ex6">3. Parameter</string>
    <string name="Pda_ex7">4. Return Type</string>
    <string name="Pda_ex8">5. Error Handling</string>
    <string name="Pda_ex9">6. Description</string>


    <!--          Q-ARC Lab          -->


    <string name="text_arc1">Quantum School of Technology recently signed an MOU with APS GmbH, European centre for mechatronics – Germany. Under this lab, the students at Quantum are getting extensive training on cutting edge Robotics Software under German trainers and supervisors. This training is meant to pave the way for Quantum students to access the industrial robots located in Germany in companies like Volkswagen, BMW, Mercedes, etc. And apply their work practically.</string>
    <string name="text_arc2">Quantum has already sent two of its faculties, Assistant Professors namely Anees Ahmed and Manish Mittal to Germany on a Special Training with a purpose to get an additional knowledge on automation and industrial Robotics. The faculty has spend 15 days at the advanced centre in Germany for the training and got well trained in latest robotic technologies by German experts.</string>
    <string name="text_arc3">The aim of ARC lab is to enhance the current education by introducing concrete industrial automation concepts by teaching robotics in Indian universities, with access to real industrial. Further, these labs can support Indian industries including SMEs by providing automation solutions tested under real production requirements.</string>
    <string name="text_arc4">ARC provides the students the access to industrial robotics under production conditions with remote control. These practical courses allow direct control of the industrial robots in Germany from Quantum. The students learn simulating, programming and controlling in order to test their results at these industrial robots, which are equipped with grippers, sensors, etc.</string>
    <string name="text_arc5">The students trained in ARC software shall become highly paid, skilled engineers for large industrial like automobile, food processing, power and other automated manufacturing industries both in India and abroad.</string>
    <string name="text_arc6">Another great move by Quantum, awarded as the “Best Engineering College Promoting Innovation in North India.”</string>
    <string name="text_arc7">Quantum School of Technology\n“Growth Unbound”</string>
    <string name="text_arc">Quantum Advanced Robotic Control Lab</string>

    <string name="abt_dev">:-----------------:: Developer ::-----------------:</string>
    <string name="dev1">Bhagwan Singh</string>
    <string name="dev2">B.Tech(2016-20)- CSE Department</string>
    <string name="dev3">Quantum School of Technology</string>
    <string name="dev_C">Developed by RiNZEX</string>

    <string name="abt_aps_rs">About APS Robot Server:-</string>
    <string name="aps">Automotive Product Solutions-Germany GmbH</string>
    <string name="aps_rs">Robot Server</string>




</resources>
