<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_screen1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/Pda_frame"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:visibility="visible" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layer01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout_menu"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="130dp"
        android:background="#ffffff"
        android:padding="10dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Pda_stage1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp"
                    android:padding="10dp"
                    android:text="@string/Pda_stage1"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/Pda1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:text="@string/Pda1"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/pda_arrow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/pda_arrow"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/Pda2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:text="@string/Pda2"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/pda_arrow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/pda_arrow"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/Pda3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:text="@string/Pda3"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/pda_arrow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/pda_arrow"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/Pda4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:padding="10dp"
                    android:text="@string/Pda4"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/Pda5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:padding="10dp"
                    android:text="@string/Pda5"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/Pda_stage2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:text="@string/Pda_stage2"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/Pda6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:text="@string/Pda6"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/pda_arrow4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/pda_arrow"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/Pda7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:text="@string/Pda7"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/pda_arrow5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/pda_arrow"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/Pda8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:padding="10dp"
                    android:text="@string/Pda8"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:id="@+id/Pda_example"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/common_google_signin_btn_text_dark_pressed"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/Pda_ex1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Pda_ex1"
                        android:textAlignment="textStart"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Pda_ex2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="30dp"
                        android:text="@string/Pda_ex2"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Pda_ex3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="30dp"
                        android:text="@string/Pda_ex3"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/Pda_ex4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="60dp"
                        android:text="@string/Pda_ex4"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/Pda_ex5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="60dp"
                        android:text="@string/Pda_ex5"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/Pda_ex6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="60dp"
                        android:text="@string/Pda_ex6"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/Pda_ex7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="60dp"
                        android:text="@string/Pda_ex7"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/Pda_ex8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="60dp"
                        android:text="@string/Pda_ex8"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/Pda_ex9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="60dp"
                        android:text="@string/Pda_ex9"
                        android:textStyle="bold|italic" />


                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>